2.2.2/_sources/gallery/axisartist/simple_axisartist1.rst.txt


.. _sphx_glr_gallery_axisartist_simple_axisartist1.py:


==================
Simple Axisartist1
==================





.. image:: /gallery/axisartist/images/sphx_glr_simple_axisartist1_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt
    import mpl_toolkits.axisartist as AA

    fig = plt.figure(1)
    fig.subplots_adjust(right=0.85)
    ax = AA.Subplot(fig, 1, 1, 1)
    fig.add_subplot(ax)

    # make some axis invisible
    ax.axis["bottom", "top", "right"].set_visible(False)

    # make an new axis along the first axis axis (x-axis) which pass
    # through y=0.
    ax.axis["y=0"] = ax.new_floating_axis(nth_coord=0, value=0,
                                          axis_direction="bottom")
    ax.axis["y=0"].toggle(all=True)
    ax.axis["y=0"].label.set_text("y = 0")

    ax.set_ylim(-2, 4)

    plt.show()



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: simple_axisartist1.py <simple_axisartist1.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: simple_axisartist1.ipynb <simple_axisartist1.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
